package edu.sandiego.comp305.sp23;

/**
 * States for a game of Hexapawn at any given moment, but can be applied to other games, such as chess.
 * @author JP Tasto
 */
public enum StatesOfGame{
    WHITE_WON, BLACK_WON, NO_WINNER
}
