@startuml
'https://plantuml.com/class-diagram


class Pawn{
    - direction
    - {field} pawnID
    - type
    + Pawn(PawnTypes type, int pawnID)
    + Pawn(Pawn otherPawn)
    + boolean equals(otherObj)
    + Directions getDirection()
    + int getPawnID()
    + PawnTypes getType()
}

class HexapawnBoard{
    - Pawn[][] board
    + HexapawnBoard()
    + void move(int pawnID)
    + void attack(int pawnID, boolean isAttackingWestward)
    + StatesOfGame doesWinnerExist(boolean isWhitesTurn)
    + Pawn[][] getBoard()
    + void resetBoard()
    + String toString()
    # int[] getPawnPosition(int pawnID)
    - Pawn removePawn(int[] postionOfPawn)
    - boolean isInBounds(int targetRow, int targetColumn)
    - PawnTypes getOpponentsColor(Pawn targetPawn)
}

class BoardDrawer{
    - Pawn[][] hexapawnBoard;
    - final boolean[][] isBlackTile
    + BoardDrawer()
    + drawBoard(Pawn[][] board)
    - String drawPawn(int curLine, int curRowIndex, int curColumnIndex, PawnTypes pawnType)
    - String drawEmptySquare(int curRowIndex, int curColumnIndex)
}

class HexapawnPerfectBlackAI{
    # HexapawnBoard hexapawnBoard
    + HexapawnPerfectBlackAI()
    + HexapawnPerfectBlackAI(HexapawnBoard hexapawnBoard)
    + String blackDoBestMove()
}

class HexapawnWhitePlayerPrompts{
    # HexapawnBoard hexapawnBoard
    + HexapawnWhitePlayerPrompts()
    + HexapawnWhitePlayerPrompts(HexapawnBoard hexapawnBoard)
    + String getWhitePlayerPrompts()
}

class Main{
    + void {static} main(String[] args)
}

enum PawnTypes{
    WHITE
    BLACK
    BLANK_SPACE
}

enum Directions{
    FORWARDS
    BACKWARDS
    BLANK_SPACE
}

enum StatesOfGame{
    WHITE_WON
    BLACK_WON
    NO_WINNER
}

Pawn o-- PawnTypes
Pawn o-- Directions
HexapawnBoard o-- StatesOfGame
BoardDrawer --o Main
HexapawnPerfectBlackAI *-- HexapawnBoard
HexapawnWhitePlayerPrompts *-- HexapawnBoard
Main o-- HexapawnWhitePlayerPrompts
Main o-- HexapawnPerfectBlackAI
Main o-- HexapawnBoard
HexapawnBoard "One" o-- "Many" Pawn : contains

note as getBoardFromMain
    When initialized in the main method, the hexapawnBoard
    variable of both instances refer to the same HexapawnBoard.

    (The constructors with a parameter are used for both
    classes when they are initialized in Main, and
    the HexapawnBoard passed in as a parameter is a
    HexapawnBoard that was initialized earlier in Main.)
end note

getBoardFromMain . HexapawnPerfectBlackAI
getBoardFromMain .. HexapawnWhitePlayerPrompts

@enduml